--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Starfish School</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
+
+    <div class="smooth">
+        <div class="header">
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#details">Details</a></li>
+                <li><a href="#setup">Setup</a></li>
+                <li><a href="#resources">Resources</a></li>
+                <li><a href="#exercises">Exercises</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </div>
     <section id="home">
+        <h1 id="menu">STARFISH SCHOOL</h1>
+
         <h2>This is the website for Starfish School</h2>
     </section>
     <section id="details">
         <h2>This is where the details of the school will go</h2>
+    </section>
+    <section id="setup">
+        <h2>This is where external resources will go</h2>
     </section>
     <section id="resources">
         <h2>This is where links to Resources will Go</h2>
@@ -19,11 +39,9 @@
     <section id="exercises">
         <h2>This is where the exercises will go</h2>
     </section>
-    <section id="externallinks">
-        <h2>This is where external resources will go</h2>
-    </section>
     <section id="contact">
         <h2>This is where contact information will go</h2>
     </section>
 </body>
+
 </html>
