--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <section id="home">
-            <h1 id="menu">STARFISH SCHOOL</h1>
+            <h1 id="title">STARFISH SCHOOL</h1>
 
             <h2>This is the website for Starfish School</h2>
         </section>
