--- a/index.html
+++ b/index.html
@@ -23,24 +23,37 @@
         </div>
 
         <section id="home">
-            <h1 id="title">STARFISH SCHOOL</h1>
 
-            <h2>This is the website for Starfish School</h2>
+            <div id="mainbox">
+                <h1 id="title">STARFISH SCHOOL 2020</h1>
+                <h2 id="subtitle">A Virtual Bootcamp on Computing, Statistics, and Scholarship for Astronomy Graduate
+                    Students</h2>
+                <p id="affil">David A. Dunlap Department for Astronomy &amp; Astrophysics, University of Toronto <br />
+                    Dunlap Institute for Astronomy &amp; Astrophysics, University of Toronto
+                </p>
+            </div>
         </section>
         <section id="details">
-            <h2>This is where the details of the school will go</h2>
+            <div class="contentbox">
+                <h2>This is where the details of the school will go</h2>
+            </div>
         </section>
         <section id="setup">
-            <h2>This is where external resources will go</h2>
+            <div class="contentbox">
+            <h2>This is where external resources will go</h2></div>
         </section>
         <section id="resources">
-            <h2>This is where links to Resources will Go</h2>
+            <div class="contentbox"><h2>This is where links to Resources will Go</h2></div>
         </section>
         <section id="exercises">
-            <h2>This is where the exercises will go</h2>
+            <div class="contentbox"><h2>This is where the exercises will go</h2></div>
         </section>
         <section id="contact">
-            <h2>This is where contact information will go</h2>
+            <div class="contentbox">
+                <h2 class="boxtitle">Contact Information</h2>
+                <p>The primary means of communication for the course will be through the Astro @ UofT Slack. If you are already a member, please join the #starfishschool channel.</p>
+                <p>Organizers:</p>
+            </div>
         </section>
 
     </div>
