--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#details">Details</a></li>
+                <li><a href="#schedule">Schedule</a></li>
                 <li><a href="#setup">Setup</a></li>
                 <li><a href="#resources">Resources</a></li>
                 <li><a href="#exercises">Exercises</a></li>
@@ -35,24 +36,129 @@
         </section>
         <section id="details">
             <div class="contentbox">
-                <h2>This is where the details of the school will go</h2>
+                <div>The incoming graduate student virtual bootcamp will provide students the tools and techniques in
+                    computing, statistics, and scholarship that are rarely taught formally and/or systematically in an
+                    undergraduate setting. The primary goals of the bootcamp are:
+                    <ul>
+                        <li>Introduce the fundamentals of computing, research skills and practices, and coding for
+                            astronomical research</li>
+                        <li>Introduce the fundamentals of descriptive statistics for astronomical research</li>
+                        <li>Develop familiarity with the most commonly used tools, procedures, and packages within
+                            Python and R</li>
+                        <li>Develop an efficient, systematic, and reproduceable coding and debugging workflow</li>
+                        <li>Create a community of knowledge-sharing amongst the incoming graduate class</li>
+                    </ul>
+
+                    The five bootcamp sessions will be held virtually via Zoom every Friday afternoon from September 11,
+                    2020 to October 9, 2020. Each session will involve both instructor-led demonstrations and guided
+                    workbooks. The bootcamp will be strongly encouraged for all incoming grad students, as well as open
+                    to all upper year grad students.
+                </div>
+
+                <div>
+                    <h2>Bootcamp Expectations</h2>
+                    This will be an interactive course, and there will be interactive demos and problems that we intend
+                    to be completed collectively during the scheduled hours. We expect full participation of all
+                    attendees.
+                </div>
+            </div>
+        </section>
+        <section id="schedule">
+            <div class="contentbox">
+                <div class="boxtitle">Schedule</div>
+                <ul class="sched">
+                    <li class="schedday">SEPTEMBER 11: SCRATCHING THE SURFACE
+                        <ul class="syllabus">
+                            <li>How to effectively use the NASA Abstract Data Service</li>
+                            <li> How to access literature through the University of Toronto Library Services</li>
+                            <li>
+                                How to use LaTeX effectively for academic writing
+                            </li>
+                            <li>
+                                How to develop best practices for literature reviews, and academic writing
+                            </li>
+
+                        </ul>
+                    </li>
+                    <li class="schedday">SEPTEMBER 18: FUNDAMENTALS OF CODING
+                        <ul class="syllabus">
+                            <li>The primary ways to work with Python and R</li>
+                            <li>The fundamental concepts of coding</li>    
+                            <li>How to find, install, and use packages in Python and R</li>	
+                            <li>Examples of useful packages for astronomy in Python and R</li>	
+                        </ul>
+                    </li>
+                    <li class="schedday">SEPTEMBER 25: STATISTICS AND EXPLORATORY DATA ANALYSIS
+                        <ul class="syllabus">
+                            <li>The fundamentals of descriptive statistics and distributions</li> 
+                            <li>How to work with optimization (modelling and fitting), interpolation, and smoothing algorithms in Python and R</li> 
+                        </ul>
+                    </li>
+                    <li class="schedday">OCTOBER 2: CODING WORKFLOWS
+                        <ul class="syllabus">
+                            <li>How to use version control systems (Git/Github)</li>
+                            <li>Best practices of version control and documentation (including Markdown)</li>
+                            <li>The basics of relational databases (SQL)</li>
+                        </ul>
+                    </li>
+                    <li class="schedday">OCTOBER 9: DEBUGGING AND DATA VISUALIZATION
+                        <ul class="syllabus">
+                            <li>The fundamental steps of debugging</li>
+                            <li>Using debuggers, error messages, and tests, including within IDEs</li>
+                            <li>Best practices for optimizing code</li>
+                            <li>How to seek help effectively </li>
+                            <li>Data Visualization techniques in Python</li>
+                        </ul>
+                    </li>
+
+                </ul>
             </div>
         </section>
         <section id="setup">
             <div class="contentbox">
-            <h2>This is where external resources will go</h2></div>
+                <div class="boxtitle">Setup</div>
+                <div>We are putting together guides on how to get your system set up for the bootcamp. When setup materials are available, they will be posted here. </div>
+            </div>
         </section>
         <section id="resources">
-            <div class="contentbox"><h2>This is where links to Resources will Go</h2></div>
+            <div class="contentbox">
+                <div class="boxtitle">Resources</div>
+                <div>Resources we talk about from the bootcamp will be posted here.</div>
+            </div>
         </section>
         <section id="exercises">
-            <div class="contentbox"><h2>This is where the exercises will go</h2></div>
+            <div class="contentbox">
+                <div class="boxtitle">Exercises</div>
+                <div>When the exercises for each of the bootcamp sessions are made available, they'll be posted here.</div>
+            </div>
         </section>
         <section id="contact">
             <div class="contentbox">
-                <h2 class="boxtitle">Contact Information</h2>
-                <p>The primary means of communication for the course will be through the Astro @ UofT Slack. If you are already a member, please join the #starfishschool channel.</p>
-                <p>Organizers:</p>
+                <div class="boxtitle">Contact Information</div>
+                <div>The primary means of communication for the course will be through the Astro @ UofT Slack. If you
+                    are already a member, please join the #starfishschool channel.</div>
+                <div class="organizers"><b>Organizers:</b>
+                    <ul>
+                        <li>
+                            <div class="profilepic" id="gwen"> </div>
+                            <a href="https://www.astro.utoronto.ca/~eadie/">Prof. Gwendolyn Eadie</a> <br>
+                            gwen.eadie@utoronto.ca
+                        </li>
+                        <li>
+                            <div class="profilepic" id="renee"> </div>
+                            <a href="https://www.dunlap.utoronto.ca/~hlozek/">Prof. Renée Hložek</a> <br>
+                            renee.hlozek@utoronto.ca
+                        </li>
+                        <li>
+                            <div class="profilepic" id="mubdi"> </div>
+                            <a href="http://www.mubdirahman.com">Dr. Mubdi Rahman</a><br>
+                            mubdi.rahman@utoronto.ca
+                        </li>
+                    </ul>
+                </div>
+                <div class="supporters"><b>Hosted By:</b> <br>
+                    <img src="img/Dunlap_CombinationIdentityUofT_Eng_White.png" alt="Dunlap Institute for Astronomy and Astrophysics" class="logo"> <br>
+                    The David A. Dunlap Department for Astronomy &amp; Astrophysics, University of Toronto
             </div>
         </section>
 
