Played with spacing

--- a/index.html
+++ b/index.html
@@ -83,15 +83,16 @@
                     <li class="schedday">SEPTEMBER 18: FUNDAMENTALS OF CODING
                         <ul class="syllabus">
                             <li>The primary ways to work with Python and R</li>
-                            <li>The fundamental concepts of coding</li>    
-                            <li>How to find, install, and use packages in Python and R</li>	
-                            <li>Examples of useful packages for astronomy in Python and R</li>	
+                            <li>The fundamental concepts of coding</li>
+                            <li>How to find, install, and use packages in Python and R</li>
+                            <li>Examples of useful packages for astronomy in Python and R</li>
                         </ul>
                     </li>
                     <li class="schedday">SEPTEMBER 25: STATISTICS AND EXPLORATORY DATA ANALYSIS
                         <ul class="syllabus">
-                            <li>The fundamentals of descriptive statistics and distributions</li> 
-                            <li>How to work with optimization (modelling and fitting), interpolation, and smoothing algorithms in Python and R</li> 
+                            <li>The fundamentals of descriptive statistics and distributions</li>
+                            <li>How to work with optimization (modelling and fitting), interpolation, and smoothing
+                                algorithms in Python and R</li>
                         </ul>
                     </li>
                     <li class="schedday">OCTOBER 2: CODING WORKFLOWS
@@ -117,7 +118,8 @@
         <section id="setup">
             <div class="contentbox">
                 <div class="boxtitle">Setup</div>
-                <div>We are putting together guides on how to get your system set up for the bootcamp. When setup materials are available, they will be posted here. </div>
+                <div>We are putting together guides on how to get your system set up for the bootcamp. When setup
+                    materials are available, they will be posted here. </div>
             </div>
         </section>
         <section id="resources">
@@ -129,7 +131,8 @@
         <section id="exercises">
             <div class="contentbox">
                 <div class="boxtitle">Exercises</div>
-                <div>When the exercises for each of the bootcamp sessions are made available, they'll be posted here.</div>
+                <div>When the exercises for each of the bootcamp sessions are made available, they'll be posted here.
+                </div>
             </div>
         </section>
         <section id="contact">
@@ -157,9 +160,12 @@
                     </ul>
                 </div>
                 <div class="supporters"><b>Hosted By:</b> <br>
-                    <img src="img/Dunlap_CombinationIdentityUofT_Eng_White.png" alt="Dunlap Institute for Astronomy and Astrophysics" class="logo"> <br>
-                    The David A. Dunlap Department for Astronomy &amp; Astrophysics, University of Toronto
-            </div>
+                    <center>
+                        <img src="img/Dunlap_CombinationIdentityUofT_Eng_White.png"
+                            alt="Dunlap Institute for Astronomy and Astrophysics" class="logo"> <br>
+                        The David A. Dunlap Department for Astronomy &amp; Astrophysics, University of Toronto
+                    </center>
+                </div>
         </section>
 
     </div>
