Added Setup Doc

--- a/index.html
+++ b/index.html
@@ -125,8 +125,9 @@
         <section id="setup">
             <div class="contentbox">
                 <div class="boxtitle">Setup</div>
-                <div>We are putting together guides on how to get your system set up for the bootcamp. When setup
-                    materials are available, they will be posted here. </div>
+                <div><center>The Setup Guide for the 2020 Starfish School (for Windows, MacOS, and Linux) is now available here: <br/>
+                        <a href="share/Setup Document.pdf">Setup Document (Version 1.1)</a>
+                    </center> </div>
             </div>
         </section>
         <section id="resources">
