Added slides and exercise for week 1

--- a/index.html
+++ b/index.html
@@ -133,14 +133,27 @@
         <section id="resources">
             <div class="contentbox">
                 <div class="boxtitle">Resources</div>
-                <div>Resources we talk about from the bootcamp will be posted here.</div>
+                <ul class="resources">
+                    <li class="resourcebox">LECTURE/DEMO SLIDES
+                        <ul class="resourcelist">
+                            <li>September 11: <a href="share/Slides_Week1.pdf">Scratching the Surface</a></li>
+
+
+                        </ul>
+                    </li>
+                </ul>
             </div>
         </section>
         <section id="exercises">
             <div class="contentbox">
                 <div class="boxtitle">Exercises</div>
-                <div>When the exercises for each of the bootcamp sessions are made available, they'll be posted here.
-                </div>
+                <ul class="sched">
+                    <li class="schedday">SEPTEMBER 11: SCRATCHING THE SURFACE
+                        <ul class="syllabus">
+                            <li><a href="share/Exercises_Week1.pdf">Main Exercises (PDF)</a> </li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
         </section>
         <section id="contact">
