--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
                     <li class="resourcebox">LECTURE/DEMO SLIDES
                         <ul class="resourcelist">
                             <li>September 11: <a href="share/Slides_Week1.pdf">Scratching the Surface</a></li>
+                            <li>September 18: <a href="share/Slides_Week2.pdf">Fundamentals of Coding</a></li>
 
 
                         </ul>
@@ -151,6 +152,12 @@
                     <li class="schedday">SEPTEMBER 11: SCRATCHING THE SURFACE
                         <ul class="syllabus">
                             <li><a href="share/Exercises_Week1.pdf">Main Exercises (PDF)</a> </li>
+                        </ul>
+                    </li>
+                    <li class="schedday">SEPTEMBER 18: Fundamentals of Coding
+                        <ul class="syllabus">
+                            <li><a href="share/Week2/Week 2 Exercise (Python).ipynb">Jupyter Notebook for Problem</a> </li>
+                            <li><a href="share/Week2/data.csv">Data for Problem (csv)</a> </li>
                         </ul>
                     </li>
                 </ul>
