--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
                     <li class="schedday">SEPTEMBER 18: Fundamentals of Coding
                         <ul class="syllabus">
                             <li><a href="share/Week2/Week 2 Exercise (Python).ipynb">Jupyter Notebook for Problem</a> </li>
+                            <li><a href="share/Week2/Week 2 Exercise R.r">R Script for Problem</a> </li>
                             <li><a href="share/Week2/data.csv">Data for Problem (csv)</a> </li>
                         </ul>
                     </li>
