Added week 2 solutions

--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
                             <li><a href="share/Week2/Week 2 Exercise (Python).ipynb">Jupyter Notebook for Problem</a> </li>
                             <li><a href="share/Week2/Week 2 Exercise R.r">R Script for Problem</a> </li>
                             <li><a href="share/Week2/data.csv">Data for Problem (csv)</a> </li>
+                            <li><a href="share/Week2/Week 2 Exercise (Python) - Solutions.ipynb">Solutions (Python)</a></li>
+                            <li><a href="share/Week2/Week 2 Exercise (R) - Solutions.r">Solutions (R)</a></li>
                         </ul>
                     </li>
                 </ul>
