--- a/index.html
+++ b/index.html
@@ -163,6 +163,12 @@
                             <li><a href="share/Week2/Week 2 Exercise (R) - Solutions.r">Solutions (R)</a></li>
                         </ul>
                     </li>
+                    <li class="schedday">
+                        <ul class="syllabus">
+                            <li><a href="share/Week3/Exercises - Week 3.pdf">All Exercises (PDF)</a></li>
+                            <li><a href="share/Week3/xvalues.csv">Data for Problem (csv)</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </section>
