--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                             <li><a href="share/Exercises_Week1.pdf">Main Exercises (PDF)</a> </li>
                         </ul>
                     </li>
-                    <li class="schedday">SEPTEMBER 18: Fundamentals of Coding
+                    <li class="schedday">SEPTEMBER 18: FUNDAMENTALS OF CODING
                         <ul class="syllabus">
                             <li><a href="share/Week2/Week 2 Exercise (Python).ipynb">Jupyter Notebook for Problem</a> </li>
                             <li><a href="share/Week2/Week 2 Exercise R.r">R Script for Problem</a> </li>
@@ -163,7 +163,7 @@
                             <li><a href="share/Week2/Week 2 Exercise (R) - Solutions.r">Solutions (R)</a></li>
                         </ul>
                     </li>
-                    <li class="schedday">
+                    <li class="schedday">SEPTEMBER 25: STATISTICS AND EXPLORATORY DATA ANALYSIS
                         <ul class="syllabus">
                             <li><a href="share/Week3/Exercises - Week 3.pdf">All Exercises (PDF)</a></li>
                             <li><a href="share/Week3/xvalues.csv">Data for Problem (csv)</a></li>
