Added Week 3 slides and Week 4 problems

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <ul class="resourcelist">
                             <li>September 11: <a href="share/Slides_Week1.pdf">Scratching the Surface</a></li>
                             <li>September 18: <a href="share/Slides_Week2.pdf">Fundamentals of Coding</a></li>
-
+                            <li>September 25: <a href="share/Slides_Week3.pdf">Statistics and Exploratory Data Analysis</a></li>
 
                         </ul>
                     </li>
@@ -167,6 +167,11 @@
                         <ul class="syllabus">
                             <li><a href="share/Week3/Exercises - Week 3.pdf">All Exercises (PDF)</a></li>
                             <li><a href="share/Week3/xvalues.csv">Data for Problem (csv)</a></li>
+                        </ul>
+                    </li>
+                    <li class="schedday">OCTOBER 2: CODING WORKFLOWS
+                        <ul class="syllabus">
+                            <li><a href="share/Week4/Exercises - Week 4.pdf">All Exercises (PDF)</a></li>
                         </ul>
                     </li>
                 </ul>
