--- a/index.html
+++ b/index.html
@@ -173,6 +173,16 @@
                         <ul class="syllabus">
                             <li><a href="share/Week4/Exercises - Week 4.pdf">All Exercises (PDF)</a></li>
                         </ul>
+                        <li class="schedday">OCTOBER 9: DEBUGGING AND DATA VISUALIZATION
+                            <ul class="syllabus">
+                                <li><a href="share/Week5/Exercises - Week 5.pdf">All Exercises (PDF)</a></li>
+                                <li><a href="share/Week5/Get_SDSS_spectra.ipynb">Get_SDSS_spectra (ipynb)</a></li>
+                                <li><a href="share/Week5/error_generating_script.py">error_generating_script.py (Python File)</a></li>
+                                <li><a href="share/Week5/example_Rmarkdown.Rmd">example_Rmarkdown (Rmd File)</a></li>
+                                <li><a href="share/Week5/week5_exercise.R">week5_exercise (R script)</a></li>
+                                <li><a href="share/Week5/SDSS_quasar.dat">SDSS_quasar.dat (Data File)</a></li>
+                            </ul>
+    
                     </li>
                 </ul>
             </div>
