--- a/index.html
+++ b/index.html
@@ -33,194 +33,108 @@
         <section id="home">
 
             <div id="mainbox">
-                <h1 id="title">STARFISH SCHOOL 2020</h1>
-                <h2 id="subtitle">A Virtual Bootcamp on Computing, Statistics, and Scholarship for Astronomy Graduate
-                    Students</h2>
-                <p id="affil">David A. Dunlap Department for Astronomy &amp; Astrophysics, University of Toronto <br />
-                    Dunlap Institute for Astronomy &amp; Astrophysics, University of Toronto
+                <h1 id="title">STARFISH SCHOOL 2021</h1>
+                <h2 id="subtitle">A Virtual Bootcamp on Computing, Statistics, and Scholarship for Astronomy Graduate Students
+                </h2>
+                <p id="affil">David A. Dunlap Department for Astronomy &amp; Astrophysics, University of Toronto <br /> Dunlap Institute for Astronomy &amp; Astrophysics, University of Toronto <br /> Sidrat Research
                 </p>
             </div>
         </section>
         <section id="details">
             <div class="contentbox">
-                <div>The incoming graduate student virtual bootcamp will provide students the tools and techniques in
-                    computing, statistics, and scholarship that are rarely taught formally and/or systematically in an
-                    undergraduate setting. The primary goals of the bootcamp are:
+                <div>The incoming graduate student virtual bootcamp will provide students the tools and techniques in computing, statistics, and scholarship that are rarely taught formally and/or systematically in an undergraduate setting. The primary goals
+                    of the bootcamp are:
                     <ul>
-                        <li>Introduce the fundamentals of computing, research skills and practices, and coding for
-                            astronomical research</li>
+                        <li>Introduce the fundamentals of computing, research skills and practices, and coding for astronomical research</li>
                         <li>Introduce the fundamentals of descriptive statistics for astronomical research</li>
-                        <li>Develop familiarity with the most commonly used tools, procedures, and packages within
-                            Python and R</li>
+                        <li>Develop familiarity with the most commonly used tools, procedures, and packages within Python and R</li>
                         <li>Develop an efficient, systematic, and reproduceable coding and debugging workflow</li>
                         <li>Create a community of knowledge-sharing amongst the incoming graduate class</li>
                     </ul>
 
-                    The five bootcamp sessions will be held virtually via Zoom every Friday afternoon from September 11,
-                    2020 to October 9, 2020. Each session will involve both instructor-led demonstrations and guided
-                    workbooks. The bootcamp will be strongly encouraged for all incoming grad students, as well as open
-                    to all upper year grad students.
+                    The five bootcamp sessions will be held virtually via Zoom during September and October 2021. The sessions will involve both instructor-led demonstrations and guided workbooks. The bootcamp will be strongly encouraged for all incoming grad students, as
+                    well as open to all upper year grad students.
                 </div>
 
                 <div>
                     <h2>Bootcamp Expectations</h2>
-                    This will be an interactive course, and there will be interactive demos and problems that we intend
-                    to be completed collectively during the scheduled hours. We expect full participation of all
-                    attendees.
+                    This will be an interactive course, and there will be interactive demos and problems that we intend to be completed collectively during the scheduled hours. We expect full participation of all attendees.
                 </div>
             </div>
         </section>
         <section id="schedule">
             <div class="contentbox">
                 <div class="boxtitle">Schedule</div>
-                <ul class="sched">
-                    <li class="schedday">SEPTEMBER 11: SCRATCHING THE SURFACE
-                        <ul class="syllabus">
-                            <li>How to effectively use the NASA Abstract Data Service</li>
-                            <li> How to access literature through the University of Toronto Library Services</li>
-                            <li>
-                                How to use LaTeX effectively for academic writing
-                            </li>
-                            <li>
-                                How to develop best practices for literature reviews, and academic writing
-                            </li>
+                <div> The schedule of the bootcamp will be available here on the first week of September </div>
 
-                        </ul>
-                    </li>
-                    <li class="schedday">SEPTEMBER 18: FUNDAMENTALS OF CODING
-                        <ul class="syllabus">
-                            <li>The primary ways to work with Python and R</li>
-                            <li>The fundamental concepts of coding</li>
-                            <li>How to find, install, and use packages in Python and R</li>
-                            <li>Examples of useful packages for astronomy in Python and R</li>
-                        </ul>
-                    </li>
-                    <li class="schedday">SEPTEMBER 25: STATISTICS AND EXPLORATORY DATA ANALYSIS
-                        <ul class="syllabus">
-                            <li>The fundamentals of descriptive statistics and distributions</li>
-                            <li>How to work with optimization (modelling and fitting), interpolation, and smoothing
-                                algorithms in Python and R</li>
-                        </ul>
-                    </li>
-                    <li class="schedday">OCTOBER 2: CODING WORKFLOWS
-                        <ul class="syllabus">
-                            <li>How to use version control systems (Git/Github)</li>
-                            <li>Best practices of version control and documentation (including Markdown)</li>
-                            <li>The basics of relational databases (SQL)</li>
-                        </ul>
-                    </li>
-                    <li class="schedday">OCTOBER 9: DEBUGGING AND DATA VISUALIZATION
-                        <ul class="syllabus">
-                            <li>The fundamental steps of debugging</li>
-                            <li>Using debuggers, error messages, and tests, including within IDEs</li>
-                            <li>Best practices for optimizing code</li>
-                            <li>How to seek help effectively </li>
-                            <li>Data Visualization techniques in Python</li>
-                        </ul>
-                    </li>
-
-                </ul>
             </div>
         </section>
         <section id="setup">
             <div class="contentbox">
                 <div class="boxtitle">Setup</div>
-                <div><center>The Setup Guide for the 2020 Starfish School (for Windows, MacOS, and Linux) is now available here: <br/>
-                        <a href="share/Setup Document.pdf">Setup Document (Version 1.1)</a>
-                    </center> </div>
+                <div>
+                    <center>The Setup Guide for the 2021 Starfish School (for Windows, MacOS, and Linux) will soon be available. <br/>
+                    </center>
+                </div>
             </div>
         </section>
         <section id="resources">
             <div class="contentbox">
                 <div class="boxtitle">Resources</div>
-                <ul class="resources">
-                    <li class="resourcebox">LECTURE/DEMO SLIDES 
-                        <ul class="resourcelist">
-                            <li>September 11: <a href="share/Slides_Week1.pdf">Scratching the Surface</a></li>
-                            <li>September 18: <a href="share/Slides_Week2.pdf">Fundamentals of Coding</a></li>
-                            <li>September 25: <a href="share/Slides_Week3.pdf">Statistics and Exploratory Data Analysis</a></li>
 
+                <div>Slides for each week and other resources will be posted here.</div>
+
+                <!-- <ul class="resources">
+                    <li class="resourcebox">LECTURE/DEMO SLIDES
+                        <ul class="resourcelist">
+                            Slides for each week will be posted here.
                         </ul>
                     </li>
-                </ul>
+                </ul> -->
             </div>
         </section>
         <section id="exercises">
             <div class="contentbox">
                 <div class="boxtitle">Exercises</div>
-                <ul class="sched">
-                    <li class="schedday">SEPTEMBER 11: SCRATCHING THE SURFACE
-                        <ul class="syllabus">
-                            <li><a href="share/Exercises_Week1.pdf">Main Exercises (PDF)</a> </li>
-                        </ul>
+                <div>Exercises for each of the units (and all required files) will be available here.</div>
+                <!-- <ul class="sched">
+                    <li class="schedday">
                     </li>
-                    <li class="schedday">SEPTEMBER 18: FUNDAMENTALS OF CODING
-                        <ul class="syllabus">
-                            <li><a href="share/Week2/Week 2 Exercise (Python).ipynb">Jupyter Notebook for Problem</a> </li>
-                            <li><a href="share/Week2/Week 2 Exercise R.r">R Script for Problem</a> </li>
-                            <li><a href="share/Week2/data.csv">Data for Problem (csv)</a> </li>
-                            <li><a href="share/Week2/Week 2 Exercise (Python) - Solutions.ipynb">Solutions (Python)</a></li>
-                            <li><a href="share/Week2/Week 2 Exercise (R) - Solutions.r">Solutions (R)</a></li>
-                        </ul>
-                    </li>
-                    <li class="schedday">SEPTEMBER 25: STATISTICS AND EXPLORATORY DATA ANALYSIS
-                        <ul class="syllabus">
-                            <li><a href="share/Week3/Exercises - Week 3.pdf">All Exercises (PDF)</a></li>
-                            <li><a href="share/Week3/xvalues.csv">Data for Problem (csv)</a></li>
-                        </ul>
-                    </li>
-                    <li class="schedday">OCTOBER 2: CODING WORKFLOWS
-                        <ul class="syllabus">
-                            <li><a href="share/Week4/Exercises - Week 4.pdf">All Exercises (PDF)</a></li>
-                        </ul>
-                        <li class="schedday">OCTOBER 9: DEBUGGING AND DATA VISUALIZATION
-                            <ul class="syllabus">
-                                <li><a href="share/Week5/Exercises - Week 5.pdf">All Exercises (PDF)</a></li>
-                                <li><a href="share/Week5/Get_SDSS_spectra.ipynb">Get_SDSS_spectra (ipynb)</a></li>
-                                <li><a href="share/Week5/error_generating_script.py">error_generating_script.py (Python File)</a></li>
-                                <li><a href="share/Week5/example_Rmarkdown.Rmd">example_Rmarkdown (Rmd File)</a></li>
-                                <li><a href="share/Week5/week5_exercise.R">week5_exercise (R script)</a></li>
-                                <li><a href="share/Week5/SDSS_quasar.dat">SDSS_quasar.dat (Data File)</a></li>
-                            </ul>
-    
-                    </li>
-                </ul>
+                </ul> -->
             </div>
         </section>
         <section id="contact">
             <div class="contentbox">
                 <div class="boxtitle">Contact Information</div>
-                <div>The primary means of communication for the course will be through the Astro @ UofT Slack. If you
-                    are already a member, please join the #starfishschool channel.</div>
+                <div>The primary means of communication for the course will be through the Astro @ UofT Slack. If you are already a member, please join the #starfishschool channel.</div>
                 <div class="organizers"><b>Organizers:</b>
                     <ul>
                         <li>
                             <div class="profilepic" id="gwen"> </div>
-                            <a href="https://www.astro.utoronto.ca/~eadie/">Prof. Gwendolyn Eadie</a> <br>
-                            gwen.eadie@utoronto.ca
+                            <a href="https://www.astro.utoronto.ca/~eadie/">Prof. Gwendolyn Eadie</a> <br> gwen.eadie@utoronto.ca
                         </li>
                         <li>
                             <div class="profilepic" id="renee"> </div>
-                            <a href="https://www.dunlap.utoronto.ca/~hlozek/">Prof. Renée Hložek</a> <br>
-                            renee.hlozek@utoronto.ca
+                            <a href="https://www.dunlap.utoronto.ca/~hlozek/">Prof. Renée Hložek</a> <br> renee.hlozek@utoronto.ca
                         </li>
                         <li>
                             <div class="profilepic" id="mubdi"> </div>
-                            <a href="http://www.mubdirahman.com">Dr. Mubdi Rahman</a><br>
-                            mubdi.rahman@utoronto.ca
+                            <a href="http://www.sidratresearch.com">Dr. Mubdi Rahman</a><br> mubdi@sidratresearch.com
                         </li>
                     </ul>
                 </div>
                 <div class="supporters"><b>Hosted By:</b> <br>
                     <center>
-                        <img src="img/Dunlap_CombinationIdentityUofT_Eng_White.png"
-                            alt="Dunlap Institute for Astronomy and Astrophysics" class="logo"> <br>
-                        The David A. Dunlap Department for Astronomy &amp; Astrophysics, University of Toronto
+                        <a href="http://www.dunlap.utoronto.ca"><img src="img/Dunlap_CombinationIdentityUofT_Eng_White.png" alt="Dunlap Institute for Astronomy and Astrophysics" class="logo"></a> <br>
+                        <a href="http://www.astro.utoronto.ca/">
+                            <div>The David A. Dunlap Department for Astronomy &amp; Astrophysics, University of Toronto</div>
+                        </a>
+                        <a href="http://www.sidratresearch.com/"><img src="img/sidratlogo.png" alt="Sidrat Research" class="logo"></a>
                     </center>
                 </div>
         </section>
 
-    </div>
+        </div>
 </body>
 
 </html>
