Updated with 2021 Schedule

--- a/index.html
+++ b/index.html
@@ -65,7 +65,50 @@
         <section id="schedule">
             <div class="contentbox">
                 <div class="boxtitle">Schedule</div>
-                <div> The schedule of the bootcamp will be available here on the first week of September </div>
+                <ul class="sched">
+                    <li class="schedday">WEEK OF SEPTEMBER 16: SCRATCHING THE SURFACE
+                        <ul class="syllabus">
+                            <li>How to effectively use the NASA Abstract Data Service</li>
+                            <li> How to access literature through the University of Toronto Library Services</li>
+                            <li>
+                                How to use LaTeX effectively for academic writing
+                            </li>
+                            <li>
+                                How to develop best practices for literature reviews, and academic writing
+                            </li>
+                            <li>Using the Command Line</li>
+                        </ul>
+                    </li>
+                    <li class="schedday">WEEK OF SEPTEMBER 23: FUNDAMENTALS OF CODING
+                        <ul class="syllabus">
+                            <li>The primary ways to work with Python and R</li>
+                            <li>The fundamental concepts of coding </li>
+                            <li>How to find, install, and use packages in Python and R</li>
+                            <li>Examples of useful packages for astronomy in Python and R</li>
+
+                        </ul>
+                    </li>
+                    <li class="schedday">WEEK OF SEPTEMBER 30: STATISTICS AND EXPLORATORY DATA ANALYSIS
+                        <ul class="syllabus">
+                            <li>The fundamentals of descriptive statistics and distributions</li>
+                            <li>How to work with optimization (modelling and fitting), interpolation, and smoothing algorithms in Python and R</li>
+                        </ul>
+                    </li>
+                    <li class="schedday">WEEK OF OCTOBER 7: CODING WORKFLOWS
+                        <ul class="syllabus">
+                            <li>How to use version control systems (Git/GitHub)</li>
+                            <li>Best practices of version control and documentation (including Markdown)</li>
+                        </ul>
+                    </li>
+                    <li class="schedday">WEEK OF OCTOBER 16: PRACTICAL CODING AND STATISTICS IN ASTRONOMY
+                        <ul class="syllabus">
+                            <li>The basics of relational databases (SQL)</li>
+                            <li>The fundamental steps of debugging</li>
+                            <li>How to seek help effectively</li>
+                            <li>Data Visualization techniques</li>
+                        </ul>
+                    </li>
+                </ul>
 
             </div>
         </section>
