Added setup guide

--- a/index.html
+++ b/index.html
@@ -116,8 +116,11 @@
             <div class="contentbox">
                 <div class="boxtitle">Setup</div>
                 <div>
-                    <center>The Setup Guide for the 2021 Starfish School (for Windows, MacOS, and Linux) will soon be available. <br/>
-                    </center>
+                    <div>
+                        <center>The Setup Guide for the 2021 Starfish School (for Windows, MacOS, and Linux) is now available here: <br/>
+                            <a href="share/Setup Document.pdf">Setup Document (Version 2.0)</a>
+                        </center>
+                    </div>
                 </div>
             </div>
         </section>
