Added resources and first exercise

--- a/index.html
+++ b/index.html
@@ -128,25 +128,30 @@
             <div class="contentbox">
                 <div class="boxtitle">Resources</div>
 
-                <div>Slides for each week and other resources will be posted here.</div>
-
-                <!-- <ul class="resources">
-                    <li class="resourcebox">LECTURE/DEMO SLIDES
+                <ul class="resources">
+                    <!-- <li class="resourcebox">LECTURE/DEMO SLIDES
                         <ul class="resourcelist">
                             Slides for each week will be posted here.
                         </ul>
+                    </li> -->
+                    <li class="resourcebox">LaTeX RESOURCES
+                        <ul class="resourcelist">
+                            <li><a href="http://detexify.kirelabs.org/classify.html">Detexify</a>: Use your mouse to draw out math symbols to find the correct LaTeX Equivalent</li>
+                        </ul>
                     </li>
-                </ul> -->
+                </ul>
             </div>
         </section>
         <section id="exercises">
             <div class="contentbox">
                 <div class="boxtitle">Exercises</div>
-                <div>Exercises for each of the units (and all required files) will be available here.</div>
-                <!-- <ul class="sched">
-                    <li class="schedday">
+                <ul class="sched">
+                    <li class="schedday">SEPTEMBER 11: SCRATCHING THE SURFACE
+                        <ul class="syllabus">
+                            <li><a href="share/Exercises_Week1.pdf">Main Exercises (PDF)</a> </li>
+                        </ul>
                     </li>
-                </ul> -->
+                </ul>
             </div>
         </section>
         <section id="contact">
