Added week 1-1 slide

--- a/index.html
+++ b/index.html
@@ -129,11 +129,12 @@
                 <div class="boxtitle">Resources</div>
 
                 <ul class="resources">
-                    <!-- <li class="resourcebox">LECTURE/DEMO SLIDES
+                    <li class="resourcebox">LECTURE/DEMO SLIDES
                         <ul class="resourcelist">
-                            Slides for each week will be posted here.
+                            <li>Week 1, Session 1:
+                                <a href="share/Week 1-1.pdf">PDF</a></li>
                         </ul>
-                    </li> -->
+                    </li>
                     <li class="resourcebox">LaTeX RESOURCES
                         <ul class="resourcelist">
                             <li><a href="http://detexify.kirelabs.org/classify.html">Detexify</a>: Use your mouse to draw out math symbols to find the correct LaTeX Equivalent</li>
