--- a/index.html
+++ b/index.html
@@ -132,7 +132,11 @@
                     <li class="resourcebox">LECTURE/DEMO SLIDES
                         <ul class="resourcelist">
                             <li>Week 1, Session 1:
-                                <a href="share/Week 1-1.pdf">PDF</a></li>
+                                <a href="share/Week 1-1.pdf">PDF</a>
+                            </li>
+                            <li>Week 1, Session 2:
+                                <a href="share/Week 1-2.pdf">PDF</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="resourcebox">LaTeX RESOURCES
