Added exercises and data files for week 2

--- a/index.html
+++ b/index.html
@@ -151,11 +151,18 @@
             <div class="contentbox">
                 <div class="boxtitle">Exercises</div>
                 <ul class="sched">
-                    <li class="schedday">SEPTEMBER 11: SCRATCHING THE SURFACE
+                    <li class="schedday">SEPTEMBER 16: SCRATCHING THE SURFACE
                         <ul class="syllabus">
                             <li><a href="share/Exercises_Week1.pdf">Main Exercises (PDF)</a> </li>
                         </ul>
                     </li>
+                    <li class="schedday">SEPTEMBER 23: SCRATCHING THE SURFACE
+                        <ul class="syllabus">
+                            <li><a href="share/Exercises_Week2.pdf">"Homework" Exercises (PDF)</a> </li>
+                            <li><a href="share/data.csv">Group Exercise: Data File (data.csv)</a></li>
+                        </ul>
+                    </li>
+
                 </ul>
             </div>
         </section>
