--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
                             <li>Week 1, Session 2:
                                 <a href="share/Week 1-2.pdf">PDF</a>
                             </li>
+                            <li>Week 2, Session 1:
+                                <a href="share/Week 2-1.pdf">PDF</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="resourcebox">LaTeX RESOURCES
