Added group exercises

--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
                             <li>Week 2, Session 1:
                                 <a href="share/Week 2-1.pdf">PDF</a>
                             </li>
+                            <li>Week 2, Session 2:
+                                <a href="share/Week 2-2.pdf">PDF</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="resourcebox">LaTeX RESOURCES
@@ -159,10 +162,13 @@
                             <li><a href="share/Exercises_Week1.pdf">Main Exercises (PDF)</a> </li>
                         </ul>
                     </li>
-                    <li class="schedday">SEPTEMBER 23: SCRATCHING THE SURFACE
+                    <li class="schedday">SEPTEMBER 23: FUNDAMENTALS OF CODING
                         <ul class="syllabus">
                             <li><a href="share/Exercises_Week2.pdf">"Homework" Exercises (PDF)</a> </li>
+                            <li><a href="share/Exercises_Week2_Group.pdf">Group Exercises (PDF)</a></li>
                             <li><a href="share/data.csv">Group Exercise: Data File (data.csv)</a></li>
+                            <li><a href="share/Week 2 Exercise (Python).ipynb">Group Exercise: Jupyter Notebook Template (ipynb)</a></li>
+                            <li><a href="share/Week 2 Exercise R.r">Group Exercise: R Script Template (.r)</a></li>
                         </ul>
                     </li>
 
