Updated with Exercises for Week 3

--- a/index.html
+++ b/index.html
@@ -171,7 +171,13 @@
                             <li><a href="share/Week 2 Exercise R.r">Group Exercise: R Script Template (.r)</a></li>
                         </ul>
                     </li>
-
+                    <li class="schedday">OCTOBER 7: STATISTICS AND EXPLORATORY DATA ANALYSIS
+                        <ul class="syllabus">
+                            <li><a href="share/Exercises_Week3.pdf">"Homework" Exercises (PDF)</a> </li>
+                            <li><a href="share/Exercises_Week3_Group.pdf">Group Exercises (PDF)</a></li>
+                            <li><a href="share/xvalues.csv">Group Exercise: Data File (xvalues.csv)</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </section>
